# comp308-402-Group8-W25

./: .gitignore  README.md
GenerationAPI/: README.md  app.py  package-lock.json  pdfProcessing.py  questionGenerator.py  requirements.txt  start_server.bat  summarizer.py
auth-service/: package-lock.json  package.json  server.js
auth-service/config/: authSchema.js  database.js
auth-service/controllers/: authController.js
auth-service/models/: User.js
auth-service/routes/: authRoutes.js
client/: README.md  package-lock.json  package.json  tailwind.config.js
client/micro-frontends/auth/: next.config.js  package.json
client/micro-frontends/notes/: next.config.js  package.json
client/micro-frontends/shared-ui/: package.json
client/src/app/: Providers.jsx  layout.jsx  page.jsx
client/src/components/: ProtectedRoute.jsx  Sidebar.jsx  TopBar.jsx
client/src/context/: AuthContext.jsx  ThemeContext.jsx  UserContext.jsx
server/: .gitignore  index.js  package.json
server/ai-service/: .env.sample  .gitignore  Dockerfile  app.py  poetry_commands.txt  pyproject.toml  requirements.txt
server/ai-service/blueprints/: TOFIX.md  general.py  generate.py  summarize.py
server/ai-service/lib/: constants.py  pdf_processor.py  sanitizer.py
server/ai-service/models/: generator.py  prompt.py  summarizer.py
server/ai-service/scripts/: podep.ps1  podep.sh  run.bat  run.sh
server/config/: database.js
server/controllers/: authController.js
server/middleware/: auth.js
server/models/: Summary.js  User.js
server/routes/: authRoutes.js  summary.js  upload.js
(+41 files in other folders)
